// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cheesy bread rolls page > renders the correct ingredients 1`] = `
<section
  class="mb-8 lg:mb-0"
  data-testid="INGREDIENT_LIST"
>
  <div>
     
  </div>
  <div
    class="flex flex-col"
  >
    <ul>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Manitoba flour
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          260
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Water
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          146
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class="flex flex-row items-center"
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Egg
          </p>
          <span
            class="ml-2 flex items-center"
          >
            <button
              class="outline-none focus:shadow-[0_0_0_2px] focus:shadow-black"
              data-state="closed"
              type="button"
            >
              <img
                alt=""
                class="w-[15] h-auto"
                height="15"
                quality="100"
                src="/images/misc/question-mark.svg"
                width="15"
              />
            </button>
          </span>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          24
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Dry yeast
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          9
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Salt
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          6
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Sugar
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          5
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Butter
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          5
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Slices of cheese
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          6
        </p>
      </li>
    </ul>
    <div
      class="ml-auto"
    >
      <button
        class="mt-2 rounded-full text-regular bg-pill-background py-2 px-4"
        data-testid="BAKERS_PERCENTAGE"
        role="button"
        type="button"
      >
        <p
          class="--font-local font-sans text-caption leading-paragraph "
        >
          Show bakers %
        </p>
      </button>
    </div>
  </div>
</section>
`;

exports[`Cheesy bread rolls page renders the correct ingredients 1`] = `
<section
  class="mb-8 lg:mb-0"
  data-testid="INGREDIENT_LIST"
>
  <div>
     
  </div>
  <div
    class="flex flex-col"
  >
    <ul>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Manitoba flour
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          260
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Water
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          146
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class="flex flex-row items-center"
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Egg
          </p>
          <span
            class="ml-2 flex items-center"
          >
            <button
              class="outline-none focus:shadow-[0_0_0_2px] focus:shadow-black"
              data-state="closed"
              type="button"
            >
              <img
                alt=""
                class="w-[15] h-auto"
                height="15"
                quality="100"
                src="/images/misc/question-mark.svg"
                width="15"
              />
            </button>
          </span>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          24
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Dry yeast
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          9
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Salt
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          6
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Sugar
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          5
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Butter
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          5
          g
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Slices of cheese
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          6
        </p>
      </li>
    </ul>
    <div
      class="ml-auto"
    >
      <button
        class="mt-2 rounded-full text-regular bg-pill-background py-2 px-4"
        data-testid="BAKERS_PERCENTAGE"
        role="button"
        type="button"
      >
        <p
          class="variable font-sans text-caption leading-paragraph "
        >
          Show bakers %
        </p>
      </button>
    </div>
  </div>
</section>
`;
